--- a/package.json
+++ b/package.json
@@ -1,32 +1,25 @@
 {
-  "name": "vmde",
-  "version": "1.0.0",
-  "description": "Visual Markdown Editor",
-  "main": "index.js",
-  "dependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-es2015": "^6.24.0",
-    "material-ui": "^0.17.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "webpack": "^2.3.3"
-  },
-  "devDependencies": {
-    "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-react": "^6.23.0",
-    "material-ui": "^0.17.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-tap-event-plugin": "^2.0.1",
-    "webpack": "^2.3.3"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC"
+	"name": "vmde",
+	"version": "1.0.0",
+	"description": "Visual Markdown Editor",
+	"main": "index.js",
+	"dependencies": {
+	},
+	"devDependencies": {
+		"babel-core": "^6.24.0",
+		"babel-loader": "^6.4.1",
+		"babel-preset-es2015": "^6.24.0",
+		"babel-preset-react": "^6.23.0",
+		"material-ui": "^0.17.1",
+		"react": "^15.4.2",
+		"react-dom": "^15.4.2",
+		"react-tap-event-plugin": "^2.0.1",
+		"webpack": "^2.3.3"
+	},
+	"scripts": {
+		"start": "./node_modules/.bin/webpack --watch",
+		"build": "./node_modules/.bin/webpack --display-error-details --optimize-minimize"
+	},
+	"author": "Rikson",
+	"license": "ISC"
 }
