--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Visual Markdown Editor",
   "main": "index.js",
   "repository": "git@github.com:rikuson/vmde.git",
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
     "material-ui": "^0.17.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
