--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vmde",
+  "name": "lmde",
   "version": "1.0.0",
-  "description": "Visual Markdown Editor",
+  "description": "Linear Markdown Editor",
   "main": "index.js",
   "repository": "git@github.com:rikuson/vmde.git",
   "dependencies": {
