--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Linear Markdown Editor",
   "main": "index.js",
   "repository": "git@github.com:rikuson/vmde.git",
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
@@ -16,6 +15,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
+    "react-remarkable": "^1.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "webpack": "^2.3.3"
