--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "dependencies": {},
   "devDependencies": {
     "babel-core": "^6.24.0",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.0",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
     "material-ui": "^0.17.1",
@@ -18,10 +18,12 @@
     "react-remarkable": "^1.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
-    "webpack": "^2.3.3"
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.12",
+    "webpack-dev-server": "^3.1.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/webpack --watch",
+    "start": "webpack-dev-server --config=webpack.config.dev.js",
     "build": "./node_modules/.bin/webpack --display-error-details --optimize-minimize"
   },
   "author": "Rikson",
