--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-remarkable": "^1.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
+    "shortid": "^2.2.8",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
     "webpack-dev-server": "^3.1.1"
