--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
+    "remarkable": "^2.0.0",
     "shortid": "^2.2.8",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.1"
   },
   "scripts": {
