--- a/package.json
+++ b/package.json
@@ -4,23 +4,31 @@
   "description": "Linear Markdown Editor",
   "main": "index.js",
   "repository": "git@github.com:rikuson/vmde.git",
-  "dependencies": {},
+  "dependencies": {
+    "material-ui": "^0.17.1",
+    "prop-types": "^15.7.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.6",
+    "remarkable": "^2.0.0",
+    "shortid": "^2.2.8"
+  },
   "devDependencies": {
     "babel-core": "^6.24.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-2": "^6.22.0",
-    "material-ui": "^0.17.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "react-remarkable": "^1.1.1",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
-    "redux-logger": "^3.0.6",
-    "remarkable": "^2.0.0",
-    "shortid": "^2.2.8",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "v": "^0.3.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.1"
