--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "index.js",
   "repository": "git@github.com:rikuson/vmde.git",
   "dependencies": {
-    "material-ui": "^0.17.1",
+    "@material-ui/core": "^4.9.9",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.6",
     "prop-types": "^15.7.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-redux": "^5.0.3",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-tap-event-plugin": "^3.0.3",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "remarkable": "^2.0.0",
