--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,8 @@
     "react/destructuring-assignment": "off",
     "react/no-string-refs": "off",
     "react/no-did-update-set-state": "off",
-    "react/prefer-stateless-function": "off"
+    "react/prefer-stateless-function": "off",
+    "react/forbid-prop-types": "off",
+    "array-callback-return": "off"
   }
 }
