--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^5.0.3",
+    "react-shortcuts": "^2.1.0",
     "react-tap-event-plugin": "^3.0.3",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
