--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "react/no-did-update-set-state": "off",
     "react/prefer-stateless-function": "off",
     "react/forbid-prop-types": "off",
-    "array-callback-return": "off"
+    "array-callback-return": "off",
+    "jsx-a11y/no-autofocus": "off"
   }
 }
