--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.6",
+    "markdown-it": "^10.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -16,7 +17,6 @@
     "react-tap-event-plugin": "^3.0.3",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
-    "remarkable": "^2.0.0",
     "shortid": "^2.2.8"
   },
   "devDependencies": {
