--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     "react/prefer-stateless-function": "off",
     "react/forbid-prop-types": "off",
     "array-callback-return": "off",
-    "jsx-a11y/no-autofocus": "off"
+    "jsx-a11y/no-autofocus": "off",
+    "no-underscore-dangle": "off"
   }
 }
